syntax = "proto3";

package rivet.backend.pkg.cdn.site_create;

import "proto/common.proto";
import "proto/backend/upload.proto";

message Request {
	rivet.common.Uuid game_id = 1;
	string display_name = 2;
	repeated rivet.backend.upload.PrepareFile files = 3;
}

message Response {
	rivet.common.Uuid site_id = 1;
	rivet.common.Uuid upload_id = 2;
	repeated rivet.backend.upload.PresignedUploadRequest presigned_requests = 3;
}
